--- a/scss/modules/_hacks.scss
+++ b/scss/modules/_hacks.scss
@@ -149,6 +149,10 @@
   color: $base-link-color !important;
 }
 
+#channel_prefs_dialog {
+  background: #ccc !important;
+}
+
 // .p-channel_sidebar__channel--selected,
 // .p-channel_sidebar__channel--selected:hover,
 // .p-channel_sidebar__link--selected,
